# tensor-training-core

./: .dockerignore  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  CLI_API_TEST_PLAN.md  PROJECT_STATS.md  README.ja.md  README.md  README.zh-CN.md  README.zh-TW.md  SKILL.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
configs/datasets/: coco_detection.yaml  esp32_cam_train.yaml
configs/experiments/: dev_macos.yaml  dev_macos_esp32_cam.yaml  test_tiny_efficientnet_tensorflow.yaml  test_tiny_tensorflow.yaml  train_cuda.yaml  train_tensorflow_esp32_cam.yaml  train_tensorflow_esp32_cam_dev.yaml  train_tensorflow_esp32_cam_full.yaml
configs/models/: detector_efficientnet_b0_320.yaml  ssd_mobilenet_v2_fpnlite_320.yaml
configs/training/: baseline.yaml  tensorflow.yaml  tensorflow_dev.yaml  tensorflow_full.yaml  tensorflow_tiny.yaml
docker/: Dockerfile.cuda  docker-compose.cuda.yml
docs/: ANDROID_MINIMAL_INTEGRATION.md  API_AUTH_ACCESS_CONTROL.md  API_WORKFLOW.md  ARTIFACT_LAYOUT.md  CLI_AUTOMATION.md  COCO_IMPORT_FLOW.md  CUDA_DOCKER_TRAINING.md  INTERNAL_MANIFEST.md  IOS_MINIMAL_INTEGRATION.md  LOCAL_MACOS_SETUP.md  MOBILE_DEPLOYMENT.md  SKILL_USAGE.md
requirements/: base.txt  cuda.txt  macos.txt
scripts/: bootstrap_cuda.sh  bootstrap_macos.sh  evaluate.sh  export_tflite.sh  package_mobile_assets.sh  prepare_coco.sh  run_cli.sh  serve_api.sh  train.sh
src/tensor_training_core/: __init__.py  cli.py  module_runner.py
tests/integration/: run_docker_smoke.sh  test_tiny_coco_pipeline.py
tests/unit/: test_android_minimal_example.py  test_api_app.py  (+15 more)
(+80 files in other folders)
